namespaces/live.cloud-platform.service.justice.gov.uk/laa-maat-scheduled-tasks-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-maat-scheduled-tasks-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crimeapps"
    cloud-platform.justice.gov.uk/application: "maat-scheduled-tasks"
    cloud-platform.justice.gov.uk/owner: "laa-crime-apps-team: laacrimeapps@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-maat-scheduled-tasks"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
